<?xml version="1.0"?>
<resources>
    <string name="app_name">Final_Project2</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="img_todo">TODO</string>
    <string name="img_todo2">TODO</string>
    <!--for activity main-->
    <string name="item_home">Home</string>
    <string name="item_logout">Logout</string>
    <!--for activity image-->
    <string name="view_uploade">View Uploads</string>
    <string name="user_desc">Enter Description</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_upload">Upload</string>
    <string name="txt_name">Name</string>
    <string name="name">Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="upload_item">Upload Item</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="todo">TODO</string>
    <string name="this_is_a_custom_notification">This is a custom notification</string>
    <string name="your_picture_has_been_saved">Your Picture Has Been SAVED!!</string>
    <string name="logo">TODO</string>
    <string name="textview">TextView</string>
    <string name="food_advisor">Food advisor</string>
    <string name="user_name">User Name :</string>
    <string name="password">Password :</string>
    <string name="user_name_edit">user name</string>
    <string name="button_login">Login</string>
    <string name="todo1">TODO</string>
    <string name="welcome">welcome</string>
    <string name="login">login</string>
    <string name="model_settings">model_settings</string>
    <string name="Register">Register</string>
    <string name="Registeration">Registeration</string>
    <string name="Registration">Registration</string>
    <string name="israel_israeli">israel_israeli</string>
    <string name="upload_photo">upload photo</string>
    <string name="program_diet">program diet</string>
    <string name="history">history</string>
    <string name="calories_calculator">Calories Calculator</string>
    <string name="weight">Weight</string>

    <string-array name="diet_plan">
        <item>Little or no exercise</item>
        <item>Exercise 1–3 times/week</item>
        <item>Exercise 4–5 times/week</item>
        <item>Intense exercise 6–7 times/week</item>
        <item>Very intense exercise daily, or physical job</item>
    </string-array>

</resources>