<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="195dp"
        android:layout_marginRight="1000dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="-70dp"
        android:textStyle="bold"
        app:srcCompat="@drawable/salad"
        android:contentDescription="TODO"
        android:layout_marginEnd="1000dp" />

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/textview_border1"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginStart="0dp"/>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="78dp"
        android:layout_height="82dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/pag1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="110dp"
        android:text="@string/food_advisor"
        android:textColor="#000000"
        android:textSize="42sp"
        app:fontFamily="@font/david_libre" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="200dp"
        android:text="@string/user_name"
        android:textColor="#000000"
        android:textSize="30sp"
        app:fontFamily="@font/david_libre" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="300dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="30sp"
        app:fontFamily="@font/david_libre" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorBlack">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/email_reg"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="240dp"
        android:saveEnabled="false"
        android:textCursorDrawable="@color/colorBlack" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorBlack">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/password_reg"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="340dp"
        android:saveEnabled="false"
        android:textCursorDrawable="@color/colorBlack" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="167dp"
        android:layout_height="37dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="430dp"
        android:background="#F28729"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/input_login"
        android:textSize="15sp" />



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="175dp"
        android:layout_height="195dp"
        android:layout_marginBottom="1000dp"
        android:layout_marginLeft="-80dp"
        android:layout_marginTop="490dp"
        app:srcCompat="@drawable/salad"
        android:contentDescription="@string/todo1" />
    |>

</RelativeLayout>