<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="195dp"
        android:layout_marginRight="1000dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="-70dp"
        android:textStyle="bold"
        app:srcCompat="@drawable/salad"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="1000dp"
        android:layout_marginStart="290dp" />

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/textview_border1"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginStart="0dp">

        <Button
            android:id="@+id/btnMenu1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/ic_menu" />




    </LinearLayout>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="317dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/ic_info1" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:text="@string/food_advisor"
        android:textColor="#000000"
        android:textSize="36sp"
        app:fontFamily="@font/david_libre" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/pag1" />






    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="1200dp"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/textview_border2"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginStart="0dp">

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="55dp"
            android:text="@string/israel_israeli"
            android:textColor="#000000"
            android:textSize="40sp"
            app:fontFamily="@font/david_libre"
            android:layout_marginStart="70dp" />



    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        android:layout_marginStart="120dp" />


    <LinearLayout
        android:id="@+id/btnUplodePoto"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/textview_border3"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="69dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="1000dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_camera_our" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/upload_photo"
        android:textColor="#000000"
        android:textSize="18sp"
        app:fontFamily="@font/david_libre"
        android:layout_marginStart="35dp" />

    <LinearLayout
        android:id="@+id/btnProgramDiet"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="155dp"
        android:background="@drawable/textview_border3"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginStart="135dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="1000dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/ic_programing_our"
            android:contentDescription="@string/todo"
            android:layout_marginStart="8dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/program_diet"
        android:textColor="#000000"
        android:textSize="18sp"
        app:fontFamily="@font/david_libre"
        android:layout_marginStart="143dp" />


    <LinearLayout
        android:id="@+id/btnHistory"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginStart="245dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/textview_border3"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="1000dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_history_our" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="275dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="#000000"
        android:textSize="18sp"
        app:fontFamily="@font/david_libre"
        android:layout_marginStart="255dp" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="175dp"
        android:layout_height="195dp"
        android:layout_marginBottom="1000dp"
        android:layout_marginLeft="-80dp"
        android:layout_marginTop="640dp"
        app:srcCompat="@drawable/salad"
        android:contentDescription="@string/todo"
        android:layout_marginStart="-80dp" />




</RelativeLayout>