<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_images"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.final_project2.History">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="195dp"
        android:layout_marginRight="1000dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="-70dp"
        android:textStyle="bold"
        app:srcCompat="@drawable/salad"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="1000dp"
        android:layout_marginStart="290dp" />

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/textview_border1"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginStart="0dp">

        <Button
            android:id="@+id/btnMenu1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/ic_menu" />




    </LinearLayout>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="317dp"
        android:layout_marginLeft="317dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/ic_info1" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/david_libre"
        android:text="@string/food_advisor"
        android:textColor="#000000"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/pag1" />





    <ProgressBar
        android:id="@+id/progress_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false" />

</RelativeLayout>