<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="195dp"
        android:layout_marginRight="1000dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="-70dp"
        android:textStyle="bold"
        app:srcCompat="@drawable/salad"
        android:layout_marginStart="290dp"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="1000dp" />

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/textview_border1"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginStart="0dp">




    </LinearLayout>




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/david_libre"
        android:text="@string/food_advisor"
        android:textColor="#000000"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/pag1" />


    <TextView
        android:id="@+id/btnModelSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:text="Model Settings"
        android:textColor="#000000"
        android:textSize="55sp"
        android:textStyle="bold"
        app:fontFamily="@font/david_libre" />

    <TextView
    android:id="@+id/txt1"
    android:layout_width="371dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="230dp"
    android:layout_marginLeft="10dp"
    android:gravity="center"
    android:text="Link for training the model :"
    android:textColor="#000000"
    android:textSize="25sp"
    app:fontFamily="@font/david_libre" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="https://colab.research.google.com/drive/1arEDplDLb3rcf8zg3b_872WUWSCVNmA4?usp=sharing"
        android:textColor="#0000ff"
        android:textSize="17sp"
        app:fontFamily="@font/david_libre" />

    <Button
        android:id="@+id/chooseModel"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="350dp"
        android:background="#F28729"
        android:drawableLeft="@drawable/ic_person"
        android:text="choose model"
        android:drawableStart="@drawable/ic_person" />





    <Button
        android:id="@+id/chooseLabel"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="405dp"
        android:background="#F28729"
        android:drawableLeft="@drawable/ic_settings"
        android:text="choose label"
        android:drawableStart="@drawable/ic_settings" />

    <Button
        android:id="@+id/saveModel"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="460dp"
        android:background="#F28729"
        android:drawableLeft="@drawable/ic_settings"
        android:text="save model"
        android:drawableStart="@drawable/ic_settings" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="175dp"
        android:layout_height="195dp"
        android:layout_marginBottom="1000dp"
        android:layout_marginLeft="-80dp"
        android:layout_marginTop="640dp"
        app:srcCompat="@drawable/salad"
        android:contentDescription="@string/todo"
        android:layout_marginStart="-80dp" />









</RelativeLayout>